tests/dev_and_build/errors/js_syntax_error/_js_syntax_error_dev.test.mjs/0_chromium/.jsenv/chrome@130.00/main.js
import "/js_syntax_error.js";

//# sourceMappingURL=data:application/json;charset=utf-8;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbImZpbGU6Ly8vVXNlcnMvZGFtL0RvY3VtZW50cy9kZXYvY29yZS90ZXN0cy9kZXZfYW5kX2J1aWxkL2Vycm9ycy9qc19zeW50YXhfZXJyb3IvY2xpZW50L21haW4uanMiXSwic291cmNlc0NvbnRlbnQiOlsiaW1wb3J0IFwiLi9qc19zeW50YXhfZXJyb3IuanNcIjtcbiJdLCJuYW1lcyI6W10sIm1hcHBpbmdzIjoiQUFBQSxDQUFDLENBQUMsQ0FBQyxDQUFDLENBQUMsQ0FBQyxDQUFDLHFCQUFzQjsifQ==
